Fix spacing issues in main content

--- a/app/assets/stylesheets/task-detail.css
+++ b/app/assets/stylesheets/task-detail.css
@@ -3,8 +3,8 @@
   border-color: #EFF0F1;
   background-color: white;
   height: 96%;
-  width: 49%;
-  margin-right: .5%;
+  width: 750px;
+  margin-right: 25px;
   margin-left: 1.5%;
   margin-top: 2%;
   height: 96%;
@@ -18,7 +18,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
   padding-left: 45px;
   padding-right: 20px;
   padding-bottom: 20px;
@@ -196,9 +195,6 @@
     color: #9DFBE8;
     box-shadow: 0px 0px 0px 2px #3BF7D1;
 }
-
-
-
 
 /*Completed*/
 
